--- a/src/components/LeftSide/LeftSide.scss
+++ b/src/components/LeftSide/LeftSide.scss
@@ -3,8 +3,7 @@
 .LeftSide {
   display: grid;
   grid-template: 40px 1fr / 1fr;
-  width: 100%;
-  height: 100%;
+  padding-top: 10px;
   overflow: hidden;
   background: $medium-gray;
 }
