--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,5 +1,6 @@
 .List {
-  padding: 10px;
-  height: calc(100vh - 64px - 64px - 20px);
+  margin-top: 10px;
+  padding: 0 10px 10px;
+  height: calc(100vh - 40px - 64px - 20px - 10px);
   overflow: auto;
 }
