--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,6 +1,6 @@
 .List {
   margin-top: 10px;
   padding: 0 10px 10px;
-  height: calc(100vh - 40px - 64px - 20px - 10px);
+  height: calc(100vh - 134px);
   overflow: auto;
 }
