--- a/src/components/LeftSide/LeftSide.scss
+++ b/src/components/LeftSide/LeftSide.scss
@@ -6,4 +6,8 @@
   padding-top: 10px;
   overflow: hidden;
   background: $medium-gray;
+
+  @media screen and (max-width: 1200px) {
+    height: calc(100vh - 74px);
+  }
 }
