--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -6,6 +6,7 @@
   border: none;
   font-size: $input-font-size;
   transition: .15s ease-in-out all;
+  background: $white;
 
   &:hover, &:focus {
     filter: drop-shadow(0px 1px 5px $dark-gray)
