--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -3,4 +3,8 @@
   padding: 0 10px 10px;
   height: calc(100vh - 134px);
   overflow: auto;
+
+  @media screen and (max-width: 1200px) {
+    height: calc(100vh - 20px);
+  }
 }
