--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -30,4 +30,8 @@
       filter: drop-shadow(0px 2px 5px $dark-gray)
     }
   }
+
+  @media screen and (max-width: 1200px) {
+    height: 40px;
+  }
 }
